# Penguin-Engine

./: .gitignore  CMakeLists.txt
Game/: CMakeLists.txt
Game/resources/maps/: Battlefield.tmx
Game/resources/maps/tilesets/: TX Plant.tsx  TX Tileset Grass.tsx  TX Tileset Stone Ground.tsx  TX Tileset Wall.tsx
Game/src/: main.cpp
Game/src/States/Game/: GameState.h
Game/src/States/Game/Layers/: GameLayer.h  GameUILayer.h
Game/src/States/Menu/: MenuState.h
Game/src/States/Menu/Layers/: Layer1.h
Game/src/Systems/: Inventory.h
Game/src/Systems/Actor/: ActorManager.h  Attributes.h  SpawnerComponent.h
Game/src/Systems/Actor/Controllers/: AIController.h  ActorController.h  PlayerController.h
Game/src/Systems/Battle/: Battle.cpp  Battle.h  BattleData.h  BattleGrid.cpp  BattleGrid.h  BattlePathfinder.cpp  BattlePathfinder.h  BattleSystem.cpp  BattleSystem.h  Combatant.h
Game/src/Systems/Battle/Phases/: ActionPhase.cpp  ActionPhase.h  BeginBattlePhase.cpp  BeginBattlePhase.h  EndBattlePhase.h  IBattlePhase.h  PlanningPhase.cpp  PlanningPhase.h
Game/src/Systems/Battle/UI/: BattleUIElements.h  HealthBar.h
Game/src/Systems/Utils/: Pathfinder.cpp
Game/src/Systems/World/: GameArea.cpp  GameArea.h  GameMap.cpp  GameMap.h
Penguin/: CMakeLists.txt  README.md
Penguin/include/: Penguin.h  pgpch.h
Penguin/include/Animation/: Animation.h  AnimationController.h  AnimationState.h  Animator.h
Penguin/include/Assets/: AssetManager.h  Audio.h  Font.h  Texture.h
Penguin/include/Audio/: AudioSystem.h  AudioType.h
Penguin/include/Core/: AppContext.h  Application.h  ImGuiLayer.h  Input.h  KeyList.h  Layer.h  LayerStack.h  State.h  System.h  Timer.h  Timestep.h  Window.h
Penguin/include/Debug/: DebugLayer.h  MemoryTelemetry.h
Penguin/include/ECS/: ComponentArray.h  ComponentManager.h  Components.h  Defs.h  Entity.h  EntityManager.h  Registry.h  View.h
Penguin/include/Events/: EngineEvents.h  Event.h  EventBus.h  EventToken.h  InputEvents.h  WindowEvents.h
Penguin/include/GUI/: Button.h  GUIElement.h  ImageBox.h  Label.h  LayoutGroup.h  Panel.h  ScrollGroup.h  UICanvas.h  UIManager.h
Penguin/include/Log/: ImGuiSink.h  Log.h
Penguin/include/Math/: Interpolated.h  MathUtils.h  Matrix4.h  Random.h  Rect.h  Transform.h  Vector.h
Penguin/include/Memory/: Ref.h  Scope.h
Penguin/include/Renderer/: Camera.h  CameraController.h  Color.h  RenderCommand.h  RenderShape.h  Renderable.h  Renderer.h  Sprite.h  Text.h  VertexArray.h
Penguin/src/Assets/: AssetManager.cpp  Font.cpp
Penguin/src/Audio/: AudioSystem.cpp
Penguin/src/Core/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  State.cpp  Window.cpp
Penguin/src/Debug/: DebugLayer.cpp  Telemetry.cpp
Penguin/src/ECS/: Entity.cpp  View.cpp
Penguin/src/GUI/: Button.cpp  GUIElement.cpp  Image.cpp  Label.cpp  LayoutGroup.cpp  Panel.cpp  ScrollGroup.cpp  UICanvas.cpp
Penguin/src/Log/: Log.cpp
Penguin/src/Math/: Matrix4.cpp  Vector.cpp
Penguin/src/Renderer/: CameraController.cpp  Renderer.cpp  Text.cpp
